--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
         </address>
         </div>
         <div class="container footer-social-media">
-            <h4 class="footer-soc-text">
-                Присоединяйтесь</h4>
+            <p class="footer-soc-text">
+                Присоединяйтесь</p>
             <ul class="footer-soc-list list">
                 <li class="footer-soc-item link">
                     <a href="" class="footer-soc-link">
