--- a/portfolio.html
+++ b/portfolio.html
@@ -55,67 +55,85 @@
             </ul>
             <ul class="list gallary-container">
                     <li class="gallary-element">
+                        <a class="porfolio-item" href="">
                         <img src="./images/technokryk.jpg" alt="технокряк" width="370" height="294">
                         <div class="porfolio-card">
                         <h3 class="portfolio-maine-top-text">Технокряк</h3>
                         <p class="portfolio-maine-bot-text">Веб-сайт</p>
                         </div>
+                        </a>
                     </li>
                     <li class="gallary-element" class="gallary-element">
+                        <a class="porfolio-item" href="">
                         <img src="./images/nba.jpg" alt="нба" width="370" height="294">
                         <div class="porfolio-card">
                         <h3 class="portfolio-maine-top-text">Постер <span lang="en">New Orlean vs Golden Star</span></h3>
                         <p class="portfolio-maine-bot-text">Дизайн</p>
                         </div>
+                        </a>
                     </li>
                     <li class="gallary-element" class="gallary-element">
+                        <a class="porfolio-item" href="">
                         <img src="./images/seafood.jpg" alt="морская еда" width="370" height="294">
                         <div class="porfolio-card">
                         <h3 class="portfolio-maine-top-text">Ресторан <span lang="en">Seafood</span></h3>
                         <p class="portfolio-maine-bot-text">Приложение</p>
                         </div>
+                        </a>
                     </li>
                     <li class="gallary-element" class="gallary-element">
+                        <a class="porfolio-item" href="">
                         <img src="./images/headphones.jpg" alt="наушники" width="370" height="294">
                         <div class="porfolio-card">
                         <h3 class="portfolio-maine-top-text">Проект <span lang="en">Prime</span></h3>
                         <p class="portfolio-maine-bot-text">Маркетинг</p>
                         </div>
+                        </a>
                     </li>
                     <li class="gallary-element" class="gallary-element">
+                        <a class="porfolio-item" href="">
                         <img src="./images/boxes.jpg" alt="коробки" width="370" height="294">
                         <div class="porfolio-card">
                         <h3 class="portfolio-maine-top-text">Проект <span lang="en">Boxes</span></h3>
                         <p class="portfolio-maine-bot-text">Приложение</p>
                         </div>
+                        </a>
                     </li>
                     <li class="gallary-element" class="gallary-element">
+                        <a class="porfolio-item" href="">
                         <img src="./images/monitor.jpg" alt="монитор" width="370" height="294">
                         <div class="porfolio-card">
                         <h3 class="portfolio-maine-top-text" lang="en">Inspiration has no Borders</h3>
                         <p class="portfolio-maine-bot-text">Веб-сайт</p>
                         </div>
+                        </a>
                     </li>
                     <li class="gallary-element">
+                        <a class="porfolio-item" href="">
                         <img src="./images/magazine.jpg" alt="журнал" width="370" height="294">
                         <div class="porfolio-card">
                         <h3 class="portfolio-maine-top-text">Издание <span lang="en">Limited Edition</span></h3>
                         <p class="portfolio-maine-bot-text">Дизайн</p>
                         </div>
+                        </a>
                     </li>
                     <li class="gallary-element">
+                        <a class="porfolio-item" href="">
                         <img src="./images/lab.jpg" alt="ярлык" width="370" height="294">
                         <div class="porfolio-card">
                         <h3 class="portfolio-maine-top-text">Проект <span lang="en">LAB</span></h3>
                         <p class="portfolio-maine-bot-text">Маркетинг</p>
                         </div>
+                        </a>
                     </li>
                     <li class="gallary-element">
+                        <a class="porfolio-item" href="">
                         <img src="./images/laptop.jpg" alt="бизнес" width="370" height="294">
                         <div class="porfolio-card">
                         <h3 class="portfolio-maine-top-text" lang="en">Growing Business</h3>
                         <p class="portfolio-maine-bot-text">Приложение</p>
                         </div>
+                        </a>
                     </li>
             </ul>
             </div>
